# code

./: README.md  docker-compose.yaml  index.html  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
assets/html/: HelpTOC.json  Map.jhm  about.html  config.json  marketing.html  quantum-advantage.html
docker/jupyter/: Dockerfile
src/: config.py
src/apps/: knapsack.py  utils.py
src/ch02/: ch02.ipynb
src/ch03/: README.md  ch03.ipynb  ch03_exercises.ipynb  scalar_map.py  sim_core.py  sim_gates.py  util.py
src/ch04/: ch04.ipynb  ch04_exercises.ipynb  sim_circuit.py  sim_core.py  sim_gates.py  sim_qiskit.py  util.py
src/ch05/: ch05.ipynb  ch05_exercises.ipynb  sim_circuit.py  util.py  util_qiskit.py
src/ch06/: ch06.ipynb  ch06_exercises.ipynb  sim_circuit.py  sim_core.py  util.py  util_qiskit.py
src/ch07/: ch07.ipynb  ch07_exercises.ipynb  sim_circuit.py  util.py  util_qiskit.py
src/ch08/: ch08.ipynb  ch08_exercises.ipynb  sim_circuit.py  util.py  util_qiskit.py
src/ch09/: algo.py  ch09.ipynb  ch09_exercises.ipynb  ch09_phase_estimation_unitary.ipynb  sim_circuit.py  sim_core.py  util.py  util_qiskit.py
src/ch10/: algo.py  ch10.ipynb  ch10_exercises.ipynb  sim_circuit.py  sim_core.py  util.py  util_qiskit.py
src/ch11/: algo.py  ch11.ipynb  ch11_exercises.ipynb  sim_circuit.py  sim_core.py  util.py  util_qiskit.py
src/ch12/: ch12.ipynb  sim_circuit.py  sim_core.py  util.py
src/hume/: __init__.py
src/hume/algos/: function_encoding.py  grover.py  grover_optimizer.py
src/ibmq/: ibmq_experiments_sampler.ipynb
(+13 files in other folders)
