[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hume"
description = "A quantum state simulator for those that have problems with induction"
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "sty",
  "colorcet",
  "matplotlib",
  "qiskit"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["hume*"]
namespaces = false

